# bone

./: .gitignore  README.md  startweb.sh  webserver.js
433Utils/RPi_utils/: codesend.cpp  pwr.sh  readme.txt  (+1 more)
ble/: bletest.py
cktpy/: spigpio
config/: HDMI.readme  bashrc  config_5inchlcd.txt  for.emerye.net  interfaces  named.conf.local  rev.emerye.net  startup  uEnv.txt  uEnv.txt.HDMIworks  vsftpd.conf  wpa_supplicant.conf
esp32/: .gitignore
garageweb/: readme.txt  webserver.js
icon/: pngrcp.sh  rcpi.sh  rcpi2.sh
perl/: hello.pl
pico/: cadence.py  lcd.py  lcd4pin.py  lcdBackPack.py  mcp34.py  ssd1306tst.py  temp.py  temperature.py  timebase.py  webserver.py
plot/: cell.plot  cellflt.pl  current.plot  cv.plot  iv.plot  pcell  pcell.plot  stack.plot  vmeter.plot
ps/: st.ps1
py/: bbcomm.py  curr.py  gpio.py  gpiohigh.py  lm75a.py  voltage.py
python/: lm75.py  mcp3424.py  mcp3424iio.py  pi5temp.py  readadc1115.py  rpilcd.py
python3/: readadc1115.py
scripts/: bash_aliases  bbreadadc.sh  boneiptables.sh  chadiffads.sh  covid.sh  i2cpermission.sh  ins_mcp3424  ipfw.sh  maccu  msg.txt  ocdprog  readads1115.sh  sendmess.sh  speech.sh  ssmtp.conf  vcgen  vncserver@.service
src/: i2c  i2c.c  i2ctest.c  loadcapdrivers.sh  sansserif48pt.h
tmp/: View.java
vscode/: .gitignore
vscode/epd154/: CMakeLists.txt  DEV_Config.c  DEV_Config.h  ER-EPD0154-2B.c  ER-EPD0154-2B.h  GUI_Paint.c  GUI_Paint.h  ImageData.c  ImageData.h  epd154.c  pico.txt
vscode/epd154/Fonts/: Grotesk32x64.c  font160.c  fonts.h
vscode/epd154/createfont/: combine.sh  cvt.sh
vscode/epd154/pic/: Thumbs.db
winscripts/: dailybackup.cmd  dailybackup.sh  rbackup.cmd  rbackup.sh
(+493 files in other folders)
